<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="j1y-V4-xli">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Action View Controller-->
        <scene sceneID="ceB-am-kn3">
            <objects>
                <viewController id="j1y-V4-xli" customClass="ActionViewController" customModule="Share_Text_Ext" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" opaque="NO" contentMode="scaleToFill" id="wbc-yd-nQP">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="qYC-QL-ORa">
                                <rect key="frame" x="0.0" y="0.0" width="393" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="dh3-3q-IfR"/>
                                </constraints>
                                <items>
                                    <navigationItem title="Share Extension" id="f0E-S4-fu5">
                                        <barButtonItem key="leftBarButtonItem" title="Done" style="done" id="te5-OL-dVh">
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="CloseExtension"/>
                                            </userDefinedRuntimeAttributes>
                                            <connections>
                                                <action selector="didClickNavigationDoneButtonWithSender:" destination="j1y-V4-xli" id="1qF-zQ-USE"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
                            </navigationBar>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello iOS Shared Extension" textAlignment="center" lineBreakMode="clip" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zk7-p9-RVe">
                                <rect key="frame" x="10" y="54" width="373" height="200"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="200" id="bzl-Ru-U9N"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="31"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WuY-t6-daV">
                                <rect key="frame" x="10" y="264" width="373" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="bzP-Lo-r6W"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Click"/>
                                <connections>
                                    <action selector="didClickOnLaunchViewWithSender:" destination="j1y-V4-xli" eventType="touchUpInside" id="Pg5-hn-mhm"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2oj-ZL-Kgt">
                                <rect key="frame" x="10" y="324" width="373" height="196"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="196" id="OHn-fm-QjT"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="1Xd-am-t49"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="WuY-t6-daV" firstAttribute="leading" secondItem="1Xd-am-t49" secondAttribute="leading" constant="10" id="1pk-JF-MYO"/>
                            <constraint firstItem="1Xd-am-t49" firstAttribute="trailing" secondItem="qYC-QL-ORa" secondAttribute="trailing" id="2Lx-mt-NRD"/>
                            <constraint firstItem="WuY-t6-daV" firstAttribute="top" secondItem="zk7-p9-RVe" secondAttribute="bottom" constant="10" id="HCb-Ol-imQ"/>
                            <constraint firstItem="2oj-ZL-Kgt" firstAttribute="leading" secondItem="1Xd-am-t49" secondAttribute="leading" constant="10" id="LYI-Pw-1o0"/>
                            <constraint firstItem="2oj-ZL-Kgt" firstAttribute="top" secondItem="WuY-t6-daV" secondAttribute="bottom" constant="10" id="Oqq-De-Acw"/>
                            <constraint firstItem="1Xd-am-t49" firstAttribute="trailing" secondItem="WuY-t6-daV" secondAttribute="trailing" constant="10" id="Reg-Si-rlk"/>
                            <constraint firstItem="qYC-QL-ORa" firstAttribute="top" secondItem="wbc-yd-nQP" secondAttribute="top" id="TWs-6u-ViY"/>
                            <constraint firstItem="1Xd-am-t49" firstAttribute="trailing" secondItem="2oj-ZL-Kgt" secondAttribute="trailing" constant="10" id="WDR-TT-n9L"/>
                            <constraint firstItem="qYC-QL-ORa" firstAttribute="leading" secondItem="1Xd-am-t49" secondAttribute="leading" id="WMZ-Yp-RFN"/>
                            <constraint firstItem="zk7-p9-RVe" firstAttribute="top" secondItem="qYC-QL-ORa" secondAttribute="bottom" constant="10" id="Yfu-1y-KPP"/>
                            <constraint firstItem="1Xd-am-t49" firstAttribute="trailing" secondItem="zk7-p9-RVe" secondAttribute="trailing" constant="10" id="eNV-8o-uVC"/>
                            <constraint firstItem="zk7-p9-RVe" firstAttribute="leading" secondItem="1Xd-am-t49" secondAttribute="leading" constant="10" id="g6g-aC-Oqo"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="intructionLabel" destination="2oj-ZL-Kgt" id="TUL-Tt-bty"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="CEy-Cv-SGf" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="139.69465648854961" y="3.5211267605633805"/>
        </scene>
    </scenes>
</document>
