...
    override func viewDidLoad() {
        super.viewDidLoad()
        os_log("Extension started processing", log: logger, type: .default)
       // os_log("Extension started processing", log: logger, type: .info)

        learningSDKManager.delegate = self
        intructionLabel.accessibilityIdentifier = "IntructionLabel"
        messageStr.append("viewDidLoad")
        self.intructionLabel.text = messageStr
        let sdkName = LearningSDKManager.extensionSafeAccessMethod()
        let basicFeatureAccess = LearningSDKManager.basicInfoMethod()
        let sdkVersion = LearningSDKManager.getSDKVersion()
        messageStr.append("\nSDK Name: \(sdkName)")
...
