...
//  Created by Ashish Awasthi on 19/09/24.
//

import UIKit

 public class PresentationAlertAction: NSObject {
    public static let dismiss = PresentationAlertAction(title: "OK", style: .cancel, handler: nil)
    public typealias PresentationAlertActionHandler = (() -> Void)
    public let title: String
    public let actionHandler: PresentationAlertActionHandler?
    public let style: UIAlertAction.Style

    required public init(title: String, style: UIAlertAction.Style, handler: PresentationAlertActionHandler?) {
...
